fix: mousedown and mouseup for capslock and shift

--- a/sass/layouts/_layout.scss
+++ b/sass/layouts/_layout.scss
@@ -14,13 +14,13 @@
 
     &:active {
         transform: scale(0.97);
-        background-color: #827280;
+        background-color: #835d7e;
         cursor: pointer;
     }
 
     &.active {
         transform: scale(0.97);
-        background-color: #827280;
+        background-color: #835d7e;
         cursor: pointer;
     }
 
